unpackaged/main/default/objects/Automation_Custom_Settings__c/Automation_Custom_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Holds configurable values to be used in automation logic.</description>
    <label>Automation Custom Settings</label>
</CustomObject>