unpackaged/main/default/objects/Automation_Custom_Settings__c/fields/DFP_Statements_Wait_Time__c.field-meta.xml
<CustomField>
    <fullName>DFP_Statements_Wait_Time__c</fullName>
    <description>PD-4558, the amount of time to wait for customers to upload required amount of bank statements in DFP.</description>
    <inlineHelpText>The amount of time to wait for customers to upload required amount of bank statements in DFP.
Used in flow "Record Distribution Process"</inlineHelpText>
    <label>DFP Statements Wait Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>