unpackaged/main/default/objects/Automation_Custom_Settings__c/fields/PreQual_Decline_Email_Days__c.field-meta.xml
<CustomField>
    <fullName>PreQual_Decline_Email_Days__c</fullName>
    <description>The number of days after a successful PreQual run that a decline email will be sent. Used in Consumer Risk Summary - Success Actions flow.</description>
    <inlineHelpText>The number of days after a successful PreQual run that a decline email will be sent. Used in Consumer Risk Summary - Success Actions flow.</inlineHelpText>
    <label>PreQual Decline Email # Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>