unpackaged/main/default/objects/Automation_Custom_Settings__c/fields/Renewal_Cadence_Day_Type__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Cadence_Day_Type__c</fullName>
    <description>The value can be "Business Days" or "Calendar Days".
Used in Flow: Opportunity - Renewal Update (Cadence, Milestone, Oppo Creation)</description>
    <inlineHelpText>Business Days are defined as Mon-Friday and Calendar Days would be 7 days a week.</inlineHelpText>
    <label>Renewal Cadence Day Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>