unpackaged/main/default/objects/Automation_Custom_Settings__c/fields/Repayment_Calculation_Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>Repayment_Calculation_Batch_Size__c</fullName>
    <label>Repayment Calculation Batch Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>