unpackaged/main/default/objects/Automation_Custom_Settings__c/fields/Send_Email_Retry_Limit__c.field-meta.xml
<CustomField>
    <fullName>Send_Email_Retry_Limit__c</fullName>
    <description>BAU-73, max number of retries to send email</description>
    <inlineHelpText>Max number of retries to send email, used in Flow "Case - Charge Off Email Drip"</inlineHelpText>
    <label>Send Email Retry Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>