unpackaged/main/default/objects/Automation_Custom_Settings__c/fields/States_Not_Eligible_for_Syndication__c.field-meta.xml
<CustomField>
    <fullName>States_Not_Eligible_for_Syndication__c</fullName>
    <description>BAU-256, prevent syndication for states no longer eligible (CT)</description>
    <inlineHelpText>Used in flow "Funding - Create Funding Records for Syndication" and "Opportunity - Check Eligibility to Syndicate" to prevent syndication for states no longer eligible</inlineHelpText>
    <label>States Not Eligible for Syndication</label>
    <length>255</length>
    <type>Text</type>
</CustomField>